---
source: crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{{ foo[\"bar\"][42] }}\n{{ validate[a,] }}\n{{ validate[a, b, c] }}\n{{ validate.any[a, b, c] }}"
input_file: crates/dbt-jinja/minijinja/tests/parser-inputs/getitem.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: GetItem {
                    expr: GetItem {
                        expr: Var {
                            id: "foo",
                        } @ 1:4-1:7,
                        subscript_expr: Const {
                            value: 'bar',
                        } @ 1:8-1:13,
                    } @ 1:4-1:14,
                    subscript_expr: Const {
                        value: 42,
                    } @ 1:15-1:17,
                } @ 1:1-1:21,
            } @ 1:1-1:21,
            EmitRaw {
                raw: "\n",
            } @ 1:21-2:1,
            EmitExpr {
                expr: GetItem {
                    expr: Var {
                        id: "validate",
                    } @ 2:4-2:12,
                    subscript_expr: List {
                        items: [
                            Var {
                                id: "a",
                            } @ 2:13-2:14,
                        ],
                    } @ 2:4-2:16,
                } @ 2:1-2:19,
            } @ 2:1-2:19,
            EmitRaw {
                raw: "\n",
            } @ 2:19-3:1,
            EmitExpr {
                expr: GetItem {
                    expr: Var {
                        id: "validate",
                    } @ 3:4-3:12,
                    subscript_expr: List {
                        items: [
                            Var {
                                id: "a",
                            } @ 3:13-3:14,
                            Var {
                                id: "b",
                            } @ 3:16-3:17,
                            Var {
                                id: "c",
                            } @ 3:19-3:20,
                        ],
                    } @ 3:4-3:21,
                } @ 3:1-3:24,
            } @ 3:1-3:24,
            EmitRaw {
                raw: "\n",
            } @ 3:24-4:1,
            EmitExpr {
                expr: GetItem {
                    expr: GetAttr {
                        expr: Var {
                            id: "validate",
                        } @ 4:4-4:12,
                        name: "any",
                    } @ 4:4-4:16,
                    subscript_expr: List {
                        items: [
                            Var {
                                id: "a",
                            } @ 4:17-4:18,
                            Var {
                                id: "b",
                            } @ 4:20-4:21,
                            Var {
                                id: "c",
                            } @ 4:23-4:24,
                        ],
                    } @ 4:12-4:25,
                } @ 4:1-4:28,
            } @ 4:1-4:28,
        ],
    } @ 0:0-4:28,
)
